vlib/v/checker/tests/sum_type_exists.vv
type Miscellaneous = Inexistent | Nope | int
